clean up listing page
